--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <title>Futura</title>
 </head>
 <body>
-    
+    <nav>
+        <li>
+            <img src="assets/img/vector.png" alt="Logo do Site">
+            <a href="#">
+                <img src="assets/img/logo.png" alt="Nome do Site">
+            </a>
+        </li>
+    </nav>
 </body>
 </html>
