--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
     <title>Futura</title>
 </head>
 <body>
+    <!-- INÍCIO DO HEADER -->
     <nav>
-        <li>
+        <li class="logo">
             <img src="assets/img/vector.png" alt="Logo do Site">
-            <a href="#">
-                <img src="assets/img/logo.png" alt="Nome do Site">
-            </a>
+            <a href="#"><img src="assets/img/logo.png" alt="Nome do Site"></a>
+        </li>
+        <li class="nav-link">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#stories">Stories</a></li>
+                <li><a href="#works">Works</a></li>
+                <li><a href="#pages">Pages</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#shop">Shop</a></li>
+            </ul>
+        </li>
+        <li>
+            <img src="assets/img/light.png" alt="Light">
+            <img src="assets/img/search.png" alt="Search">
         </li>
     </nav>
+    <!-- FIM DO HEADER -->
 </body>
 </html>
