including image background

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- INÍCIO DO HEADER -->
-    <nav>
+    <nav class="menu">
         <li class="logo">
             <img src="assets/img/vector.png" alt="Logo do Site">
             <a href="#"><img src="assets/img/logo.png" alt="Nome do Site"></a>
