finish menu nav

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- INÍCIO DO HEADER -->
-    <nav class="menu">
+    <header class="menu">
         <li class="logo">
             <img src="assets/img/vector.png" alt="Logo do Site">
             <a href="#"><img src="assets/img/logo.png" alt="Nome do Site"></a>
@@ -29,11 +29,11 @@
                 <li><a href="#shop">Shop</a></li>
             </ul>
         </li>
-        <li>
+        <li class="search">
             <img src="assets/img/light.png" alt="Light">
             <img src="assets/img/search.png" alt="Search">
         </li>
-    </nav>
+    </header>
     <!-- FIM DO HEADER -->
 </body>
 </html>
