Initializing the main section

--- a/index.html
+++ b/index.html
@@ -35,5 +35,16 @@
         </li>
     </header>
     <!-- FIM DO HEADER -->    
+
+     <!-- INÍCIO DO MAIN -->
+      <main class="conteudo">
+        <div>
+            <h3>Our Vision</h3>
+            <h1>Design</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum.</p>
+            <button><a href="#">Take A Look</a></button>
+        </div>
+      </main>
+     <!-- FIM DO MAIN -->
 </body>
 </html>
