changes title name

--- a/motion.html
+++ b/motion.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Viga&display=swap" rel="stylesheet">
-    <title>Futura</title>
+    <title>Futura - Motion</title>
 </head>
 <body>
     <!-- INÍCIO DO HEADER -->
@@ -40,7 +40,7 @@
       <main class="conteudo">
         <div>
             <h3>Our Vision</h3>
-            <h1>Design</h1>
+            <h1>Motion</h1>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum.</p>
              <a href="#">Take A Look</a>
              <div class="line"></div>
